crates/drivers/biotac/src/wrapper/biotac.h

typedef int			 									BOOL;
//==================================================//
// Data structure definition //
//==================================================//
typedef int BioTac;
typedef struct
{
	int index;
	double time;
	double frame_index;
	double batch_index;
	u08 channel_id;
	union
	{
		u16 word;
		u08 byte[2];
	} d[MAX_BIOTACS_PER_CHEETAH];
	u08 bt_parity[MAX_BIOTACS_PER_CHEETAH];
} bt_data;
typedef struct
{
    u08 flex_version[100];
	u08 firmware_version[100];
	u08 serial_number[100];
	union
	{
		u16 value;
		u08 byte[BT_CPU_SPEED_READ_LENGTH];
	} cpu_speed;
	BOOL bt_connected;
} bt_property;
typedef struct
{
	int spi_clock_speed;
	int number_of_biotacs;
	int sample_rate_Hz;
	struct
	{
		int frame_type;
		int frame_size;
		char frame_structure[100];
	} frame;
	struct
	{
		int batch_frame_count;
		int batch_ms;
	} batch;
} bt_info;
//==================================================//
// Function Prototypes //
//==================================================//
BioTac 	bt_cheetah_initialize(const bt_info *biotac, Cheetah *ch_handle);
BioTac 		bt_cheetah_get_properties(Cheetah ch_handle, int bt_select, bt_property *property);
BioTac 		bt_cheetah_configure_batch(Cheetah ch_handle, bt_info *biotac, int num_samples);
bt_data*	bt_configure_save_buffer(int num_samples);
void 		bt_cheetah_collect_batch(Cheetah ch_handle, const bt_info *biotac, bt_data *data, BOOL print_flag);
void		bt_display_errors(BioTac bt_err_code);
BioTac  bt_save_buffer_data(const char *file_name, const bt_data *data, int num_samples);
void 		bt_cheetah_close(Cheetah ch_handle);